--- a/css/styles.css
+++ b/css/styles.css
@@ -25,23 +25,25 @@
         display: block;
         margin-left: auto;
         margin-right: auto;
-        
-      
+             
 }
-
-.yes{
-    background-color:lightgray;
-    
-}
-h2{
+h1,h2{
     text-align: center;
+}
+.linkToRestaurant{
+  color: inherit;
+  text-decoration: none;
+}
+.restaurantDetails{
+  text-align: center;
+}
+.restaurantLocation{
+  text-align:center;
 }
 h3{
-    text-align: center;
+  text-align: left;
 }
-h1{
-    text-align: center;
-}
+
 .exploreButton{
     background-color: #9356DC ;
     color: white;
@@ -51,18 +53,14 @@ h1{
   border-radius: 25px;
  font-size: large;
 }
-.buttonContainer{
+.exploreButtonContainer{
     display: flex;
   justify-content: center;
   align-items: center;
      
 }
-.ParisBox{
-    background-color: rgba(128, 128, 128, 0.712);
-    height: 65px;
-}
 
-.button{
+.mainButton{
 
     justify-content: center;
     align-items: center;
@@ -74,65 +72,68 @@ h1{
     gap: 3em;
     height: 60px;
 }
-.button:hover{
+.mainButton:hover{
     background-color: #FF79DA ;
 }
 .restaurants{
     background-color: lightgray;
    gap: 0.5em;
-    
-   
    display: -webkit-inline-box;
    flex-wrap: wrap;
    display: flex;
    justify-content: center;
    text-align: justify;
-
-    
     
 }
+.restaurantsText{
+  width: 100%;
+ }
 .restaurantImage{
 
   width: 350px;
   height: 300px;
   border-radius: 15px;
 
-
-
 }
-.restaurantBox{
-    
+.restaurantBox{    
     width: 350px;
    position: relative;
     border-radius: 15px;
     background-color: white;
    
 }
-.laPaletteImage{
+.newLabel{
+  background-color: #99E2D0;
+  position: absolute;
+  top: 15px;
+ text-align: center;
+  right: 16px;
+  width: 60px;
+  height: 32px;
+  line-height: 33px;
+
+}
+
+.individualRestaurantImage{
 margin-bottom: -4em;
     width: 390px;
     height: 300px;
    
 }
 .mainBodyPalette{
-    background-color: lightgray;
-  
+    background-color: lightgray;  
    padding-left: 3em;
-   padding-right: 3em;
-   
+   padding-right: 3em;   
     position: relative;
     border-radius: 15px;
-    width: 390px;
-   
+    width: 390px;  
  
 }
 .menuItem{
-    background-color: white;
- 
+    background-color: white; 
   border-radius: 15px;
 height: 40px;
 width: 250px;
-
 opacity: 0;
 -webkit-animation: 2s fadeIn !important;
   animation: 2s fadeIn;
@@ -141,25 +142,21 @@ opacity: 0;
   -webkit-transition: opacity 1.5s !important;
   transition: opacity 1.5s;
 
-
 }
-.menuBox:hover .checkmark{
+.menuItemBox:hover .checkmark{
 -webkit-animation: spinningCheckmark 2s 0.6s 1;
 animation: spinningCheckmark 2s 0.6s 1;
  visibility:visible;
-
-
 }
 
 
 @-webkit-keyframes spinningCheckmark{
   100% { visibility: visible;
     
-    margin-left: 25px; -webkit-transform: translate(-40px,0)rotate(-360deg) 
-   ;}
+    margin-left: 25px; -webkit-transform: translate(-40px,0)rotate(-360deg);}
 }
 
-.favicon{
+.addToOrderFavicon{
   width: 40px;
   height: 40px;
 }
@@ -172,34 +169,7 @@ animation: spinningCheckmark 2s 0.6s 1;
       opacity: 1;
     }
   }
- .orderButton{
-    background-color: purple;
-    color: white;
-    width: 250px;
-    height: 60px;
-    border-radius:15px;
- }
-.restaurantContent{
-    max-width: max-content;
-    margin: auto;
-    text-align: center;
-}
-
-.newLabel{
-    background-color: #99E2D0;
-
-    position: absolute;
-    top: 15px;
-   text-align: center;
-    right: 16px;
-    width: 60px;
-    height: 32px;
-    line-height: 33px;
-
-}
-
-
-   
+    
 .parent__spinner{
   position: absolute;
   top: 0;
@@ -224,19 +194,34 @@ animation: spinningCheckmark 2s 0.6s 1;
   -webkit-animation-duration: 0s !important;
   -webkit-animation: fade;
  -webkit-animation-fill-mode: forwards !important;
-  
-
+ 
   }
 
+  @-webkit-keyframes fade {
+    from{
+      opacity:1;
+      display: block;
+    }
+    to{
+      opacity:0;
+      z-index:-100;
+      display:none;
+      height:0;
+      width:0;
+      
+      clip-path:circle(0);
+    }
+     }
 
-.loading__spiner{/*création du loader*/
+
+.loading__spiner{
 border: 20px solid white;
 border-top:20px solid red;
 border-bottom: 20px solid red;
-border-radius: 50%;/*arrondi des angles*/
+border-radius: 50%;
 width:100px;
 height:100px;
-margin: auto;/*placement milieu de page*/
+margin: auto;
 position:absolute;
 right:0;
 top:0;
@@ -247,9 +232,7 @@ left:0;
 -webkit-animation-duration: 3s !important;
 -webkit-animation-fill-mode: forwards !important;
 
-
 }
-
 
 @-webkit-keyframes spin {
   0% {
@@ -273,59 +256,30 @@ visibility: visible;
 
 }
 }
-
-@-webkit-keyframes fade {
-  from{
-    opacity:1;
-    display: block;
-  }
-  to{
-    opacity:0;
-    z-index:-100;
-    display:none;
-    height:0;
-    width:0;
-    
-    clip-path:circle(0);/* rognage de la totalité donc disparition*/
-  }
-   }
-
-
-
-
-
  
-.restaurantsText{
- width: 100%;
-}
 
-footer{
- background-color:  black;
- 
-}
-.links{
-  color: beige;
+
+.restaurantContent{
+  max-width: max-content;
+  margin: auto;
   text-align: center;
 }
+.orderButton{
+background-color: purple;
+color: white;
+width: 250px;
+height: 60px;
+border-radius:15px;
+}
 
-
- .footerLogo{
- filter: invert(1);
- display: block;
-  margin-left: auto;
-  margin-right: auto;
- }
- 
-
-.menuBox{
+.menuItemBox{
   display: flex;
   flex-direction: row;
   
-  display: -webkit-box;
+  
   
 }
-
-  .checkmark{
+.checkmark{
   
     visibility: hidden;
   }
@@ -347,3 +301,21 @@ footer{
     top:-3px;
    
    }
+
+   footer{
+    background-color:  black;
+    
+   }
+   .links{
+     color: beige;
+     text-align: center;
+   }
+   
+   
+    .footerLogo{
+    filter: invert(1);
+    display: block;
+     margin-left: auto;
+     margin-right: auto;
+    }
+    
