--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,9 @@
+@import url(http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300ita‌​lic,400italic,500,500italic,700,700italic,900italic,900);
+html, body {
+  font-family: 'Roboto', sans-serif;
+}
+@import url(https://fonts.googleapis.com/css2?family=Shrikhand&display=swap);
+  
 @media only screen and (max-width:450px){
    
     
@@ -5,28 +11,47 @@
         background-color: #f1f0f0;
         width: 400px;
         flex-direction: column;
-       
+        scale: 1.04;
+      
+    }
+    .footerLogo{
+      top: 27px !important;
+      right: 120px !important;
+    }
+    .links{
+      left: -124px !important;
+    }
+    .topSection{
+      height: 275px !important;
     }
     .restaurantsText{
       width: 400px;
     }
-    footer{
-      width: 400px;
-    }
+   
     
-       
+    
 }
+
 *,*::before, *::after {
     box-sizing: border-box;
+    
   }
+
 
 .ohmyfoodLogo{
    
         display: block;
         margin-left: auto;
         margin-right: auto;
+        scale: 0.7;
+        position: relative;
+        margin-bottom: 10px;
+        top:8px;
+     
+
              
 }
+
 h1,h2{
     text-align: center;
 }
@@ -34,24 +59,57 @@ h1,h2{
   color: inherit;
   text-decoration: none;
 }
-.restaurantDetails{
+.discoverText{
+  font-weight: 300;
+}
+.parisText{
+
   text-align: center;
 }
+.priceTag{
+  top: 31px;
+  position: relative;
+  right: -71px;
+  font-weight: 900;
+}
+.restaurantDetails{
+
+  margin-bottom: -1.5em;
+  position: relative;
+    left: 19px;
+    top: -13px;
+  
+}
 .restaurantLocation{
-  text-align:center;
+  
+  font-weight: 300;
+  position: relative;
+  left: 20px;
 }
 h3{
   text-align: left;
+  
 }
+.topSection{
 
+  background-color:#f1f0f0;
+  height: 250px;
+  scale: 1.04;
+}
+.locationSection{
+  background-color: rgb(227, 225, 225);
+ position: relative;
+  height: 50px;
+}
 .exploreButton{
-    background-color: #9356DC ;
+    background-image:linear-gradient(#FF79DA,#9356DC) ;
     color: white;
     align-items: center;
     height: 60px;
   width: 250px;
   border-radius: 25px;
  font-size: large;
+ border-width: inherit;
 }
 .exploreButtonContainer{
     display: flex;
@@ -61,7 +119,7 @@ h3{
 }
 
 .mainButton{
-
+  right: -2px;
     justify-content: center;
     align-items: center;
        
@@ -71,10 +129,35 @@ h3{
     background-color: #f1f0f0;
     gap: 3em;
     height: 60px;
+    position: relative;
+ 
+}
+.mainButton:before{
+  content: "";
+  z-index: -1;
+position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: lightgrey;
+  transform: translateY(5px) scale(1.0);
+  filter: blur(1px);
+  opacity: 0.7;
+  transition: opacity 0.3s;
+  border-radius: inherit;
+  
+  }
+.mainButton:hover:before{
+    
+    opacity: 1;
+   
+        
 }
 .mainButton:hover{
-    background-color: #FF79DA ;
+  background-color: #f3e9ff  ;
 }
+
 .restaurants{
     background-color: #f1f0f0;
    gap: 0.5em;
@@ -83,7 +166,8 @@ h3{
    display: flex;
    justify-content: center;
    text-align: justify;
-    
+   margin-top: 75px;
+   
 }
 .restaurantsText{
   width: 100%;
@@ -95,11 +179,24 @@ h3{
   border-radius: 15px;
 
 }
+.menuCategory{
+  font-weight: 300;
+}
+.greenHorizontalLine{
+  background-color: #99E2D0;
+  width: 46px;
+  height: 5px;
+  margin-top: -15px;
+  margin-bottom: 20px;
+}
 .restaurantBox{    
     width: 350px;
    position: relative;
     border-radius: 15px;
     background-color: white;
+    height: 376px;
+    position: relative;
+    left: 20px;
    
 }
 .newLabel{
@@ -111,28 +208,47 @@ h3{
   width: 60px;
   height: 32px;
   line-height: 33px;
+  color:#009572;
+  font-weight: 500;
+  
+
+}
+.restaurantTitle{
+  text-align: left;
+  top: 25px;
+  position: relative;
+  left: -33px;
+  font-family: 'Shrikhand';
 
 }
 
+
 .individualRestaurantImage{
-margin-bottom: -4em;
+margin-bottom: -7em;
     width: 390px;
     height: 300px;
    
 }
 .mainBodyPalette{
-    background-color: lightgray;  
+    background-color: #f1f0f0; 
    padding-left: 3em;
    padding-right: 3em;   
     position: relative;
-    border-radius: 15px;
+    border-radius: 30px;
     width: 390px;  
+
+    height: 1266px;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+    margin-bottom: -74px;
  
 }
 .menuItem{
+  padding-left: 2em;
     background-color: white; 
-  border-radius: 15px;
-height: 40px;
+  border-bottom-left-radius: 15px;
+  border-top-left-radius: 15px;
+height: 60px;
 width: 250px;
 opacity: 0;
 -webkit-animation: 2s fadeIn !important;
@@ -141,24 +257,31 @@ opacity: 0;
   animation-fill-mode: forwards;
   -webkit-transition: opacity 1.5s !important;
   transition: opacity 1.5s;
+  display: grid;
 
 }
 .menuItemBox:hover .checkmark{
 -webkit-animation: spinningCheckmark 2s 0.6s 1;
 animation: spinningCheckmark 2s 0.6s 1;
  visibility:visible;
+
+ 
 }
 
 
 @-webkit-keyframes spinningCheckmark{
   100% { visibility: visible;
     
-    margin-left: 25px; -webkit-transform: translate(-40px,0)rotate(-360deg);}
+    margin-left: 125px; -webkit-transform: translate(-100px,0)rotate(-360deg);}
+  
+  
 }
 
 .addToOrderFavicon{
-  width: 40px;
-  height: 40px;
+  width: 10px;
+  height: 10px;
+  top: 10px;
+    position: relative;
 }
 
 @-webkit-keyframes fadeIn {
@@ -262,27 +385,44 @@ visibility: visible;
 .restaurantContent{
   max-width: max-content;
   margin: auto;
-  text-align: center;
+ 
 }
 .orderButton{
-background-color: purple;
+  background-image:linear-gradient(#FF79DA,#9356DC) ;
 color: white;
 width: 250px;
 height: 60px;
-border-radius:15px;
+border-radius: 30px;
+position: relative;
+left: 25px;
+margin-top: 20px;
+border-style: none;
+font-size: larger
 }
 
 .menuItemBox{
   display: flex;
   flex-direction: row;
-  
-  
+  background-color: white;
+  border-radius: 15px;
+  position: relative;
+    left: -35px;
+    width: 363px;
   
 }
 .checkmark{
   
+    
+    background-color: white;
     visibility: hidden;
-  }
+   border-radius: 15px;
+width: 40px;
+height: 40px;
+top: 20px;
+right: -44px;
+position: relative;
+}
+  
   
 
    .heartIconIndex{
@@ -294,21 +434,37 @@ border-radius:15px;
    } 
 
    .heartIcon{
-    width: 55px;
-    height: 55px;
+ 
     position: absolute;
-    right: 15px;
-    top:-3px;
-   
+    right: -3px;
+    top: 22px;
+       
+   }
+   .heartIconMenu{
+    height: 32px;
+    width: 32px;
+    position: relative;
+    left: 293px;
+    top: -28px;
    }
 
    footer{
-    background-color:  black;
+    background-color:  #424141;
+    height: 160px;
+    margin-top: 74px;
     
    }
    .links{
-     color: beige;
+     color: white;
      text-align: center;
+     position: relative;
+    top: 20px;
+    list-style:none ;
+     
+   }
+   .contactLink{
+    color: beige;
+    text-decoration: inherit;
    }
    
    
@@ -317,5 +473,8 @@ border-radius:15px;
     display: block;
      margin-left: auto;
      margin-right: auto;
+     position: relative;
+    top: 20px;
+    right: -17px;
     }
     
