--- a/css/styles.css
+++ b/css/styles.css
@@ -133,7 +133,7 @@ h3{
     position: relative;
  
 }
-.mainButton:before{
+.menuItem:before{
   content: "";
   z-index: -1;
 position: absolute;
@@ -141,21 +141,21 @@ position: absolute;
   right: 0;
   bottom: 0;
   left: 0;
-  background: lightgrey;
-  transform: translateY(5px) scale(1.0);
+  background: white;
+  transform: translateY(3.5px) scale(1.0);
   filter: blur(1px);
   opacity: 0.7;
   transition: opacity 0.3s;
-  border-radius: inherit;
+  border-radius: 20px;
   
   }
-.mainButton:hover:before{
+.menuItem:hover:before{
     
     opacity: 1;
    
         
 }
-/*
+
 .mainButton:before{
   content: "";
   z-index: -1;
@@ -274,6 +274,18 @@ margin-bottom: -7em;
     margin-bottom: -74px;
  
 }
+.mainBodyPaletteEnchanted{
+  background-color: #f1f0f0;
+  padding-left: 3em;
+  padding-right: 3em;
+  position: relative;
+  border-radius: 30px;
+  width: 390px;
+  height: 1332px;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+  margin-bottom: -74px;
+}
 .menuItem{
   padding-left: 2em;
     background-color: white; 
@@ -293,6 +305,11 @@ opacity: 0;
   overflow:hidden;
   white-space: nowrap;
  
+}
+p{
+  text-overflow:ellipsis;
+  overflow:hidden;
+  white-space: nowrap;
 }
 
 
@@ -342,8 +359,8 @@ animation: spinningCheckmarkImage 1s 0.6s 1;
 }
 
 .checkmarkBackground{
-  width: 67px;
-    height: 67px;
+  width: 68px;
+    height: 71px;
     top: -20px;
     position: relative;
     border-top-right-radius: 16px;
